force-app/main/default/objects/Product_Account_Additional_Fields__c/Product_Account_Additional_Fields__c.object-meta.xml
<CustomObject>
    <label>Additional Fields by Product / Account</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Additional Fields by Product / Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Fields by Products / Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>