force-app/main/default/objects/Product_Account_Additional_Fields__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Additional Fields by Products / Accounts</relationshipLabel>
    <relationshipName>Additional_Fields_by_Products_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>