force-app/main/default/objects/Product_Account_Additional_Fields__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Additional Fields by Products / Accounts</relationshipLabel>
    <relationshipName>Additional_Fields_by_Products_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>