force-app/main/default/objects/Product_Account_Additional_Fields__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Additional_Field_Label_1__c</columns>
    <columns>Additional_Field_Label_2__c</columns>
    <columns>Additional_Field_Label_3__c</columns>
    <columns>Additional_Field_Label_4__c</columns>
    <columns>Additional_Field_Label_5__c</columns>
    <columns>Additional_Field_Label_6__c</columns>
    <columns>Additional_Field_Label_7__c</columns>
    <columns>Additional_Field_Label_8__c</columns>
    <columns>Additional_Field_Label_9__c</columns>
    <columns>Additional_Field_Label_10__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>